--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10",
