--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://soni0809soni:w9oDUw6GdGJAQIsB@cluster0.6euwxfy.mongodb.net/newuser
 NEXTAUTH_SECRET=MftTMILz9CMU\TKaakIuuaWdwM7aOcy7TT15yLyQlkc=
-NEXTAUTH_URL=https://dashbapp.netlify.app
+NEXTAUTH_URL=http://localhost:3000
 
 GOOGLE_CLIENT_ID=556314438687-aia20n08vit5jld22bl1lcecm8eka9kh.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
